--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "type": "git",
     "url": "git+https://github.com/PaperMonoid/mutau.git"
   },
-  "keywords": ["genetic-algorithm", "optimization", "multi-objective"],
+  "keywords": [
+    "genetic-algorithm",
+    "optimization",
+    "multi-objective"
+  ],
   "author": "PaperMonoid",
   "license": "MIT",
   "bugs": {
@@ -18,7 +22,8 @@
   },
   "homepage": "https://github.com/PaperMonoid/mutau#readme",
   "dependencies": {
-    "pareto-structs": "github:papermonoid/pareto-structs#v2.0"
+    "pareto-structs": "github:papermonoid/pareto-structs",
+    "random": "^2.1.1"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
