--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,11 @@
 {
   "compilerOptions": {
-    "outDir": "dist/",
+    "outDir": "./dist/",
     "target": "es2015",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "sourceMap": true,
     "esModuleInterop": true
   },
-  "include": ["src/*"]
+  "include": ["./src/**/*"]
 }
