--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,6 @@
     "sourceMap": true,
     "esModuleInterop": true
   },
-  "include": ["./src/**/*"]
+  "include": ["./src/**/*"],
+  "exclude": ["node_modules"]
 }
